<resources>
    <string name="app_name">MIPT3</string>

    <string name="mC">MC</string>
    <string name="mR">MR</string>
    <string name="mS">MS</string>
    <string name="mPlus">M+</string>
    <string name="mMinus">M-</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="clearAll">CE</string>
    <string name="exponent">^</string>
    <string name="parentheses">()</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="plusMinus">+/-</string>
    <string name="equals">=</string>
    <string name="root">√</string>
    <string name="percent">%</string>
    <string name="oneDividedByX">1/x</string>
    <string name="decimal">.</string>
    <string name="backspace">←</string>


</resources>