<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shrinkColumns="*"
        android:stretchColumns="*">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">


            <TextView
                android:id="@+id/calculatorScreen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingRight="30dp"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:textSize="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="453dp"
            android:layout_weight="2">


            <TextView
                android:id="@+id/resultScreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:gravity="center|right"
                android:textColor="#000000"
                android:textSize="50sp" />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/MC"
                android:layout_height="match_parent"
                android:text="@string/mC"
                android:onClick="mC"
                android:textSize="22sp" />

            <Button
                android:id="@+id/MR"
                android:layout_height="match_parent"
                android:text="@string/mR"
                android:onClick="mR"
                android:textSize="22sp" />

            <Button
                android:id="@+id/MS"
                android:layout_height="match_parent"
                android:text="@string/mS"
                android:onClick="mS"
                android:textSize="22sp" />

            <Button
                android:id="@+id/mPlus"
                android:layout_height="match_parent"
                android:text="@string/mPlus"
                android:onClick="mPlus"
                android:textSize="22sp" />

            <Button
                android:id="@+id/mMinus"
                android:layout_height="match_parent"
                android:text="@string/mMinus"
                android:onClick="mMinus"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/backspace"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:text="@string/backspace"
                android:onClick="backspaceOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/clearEverything"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:text="@string/clearAll"
                android:onClick="cleanAllClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/parentheses"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:text="@string/parentheses"
                android:onClick="bracketsOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/numberSymbolChange"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:onClick="putMinusPlus"
                android:text="@string/plusMinus"
                android:textSize="22sp" />

            <Button
                android:id="@+id/root"
                android:layout_height="match_parent"
                android:layout_column="4"
                android:text="@string/root"
                android:onClick="rootOnClick"
                android:textSize="22sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/n7"
                android:layout_height="match_parent"
                android:text="@string/seven"
                android:onClick="sevenOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/n8"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:onClick="eightOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/n9"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:onClick="nineOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/division"
                android:layout_height="match_parent"
                android:text="@string/divide"
                android:onClick="divisionOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/procent"
                android:layout_height="match_parent"
                android:text="@string/percent"
                android:onClick="procentOnClick"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/n4"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:onClick="fourOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/n5"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:onClick="fiveOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/n6"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:onClick="sixOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/multiplication"
                android:layout_height="match_parent"
                android:text="@string/multiply"
                android:onClick="multiOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/oneDividedByX"
                android:layout_height="match_parent"
                android:text="@string/oneDividedByX"
                android:onClick="oneDividedXOnClick"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/n1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:onClick="oneOnClick"
                android:textSize="22sp"
                android:layout_column="0"/>

            <Button
                android:id="@+id/n2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:onClick="twoOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/n3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:onClick="threeOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:onClick="minusOnClick"
                android:textSize="22sp" />
            <Button
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add"
                android:onClick="plusOnClick"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/n0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/zero"
                android:onClick="zeroOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:text="@string/decimal"
                android:onClick="decimalOnClick"
                android:textSize="22sp" />

            <Button
                android:id="@+id/equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/equals"
                android:onClick="equalOnClick"
                android:textSize="22sp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>